@@ -1,3 +1,8 @@
+2009-05-20  Vibi Sreenivasan <vibi_sreenivasan@cms.com>
+
+	* include/var_io.h (HAL_ARM_AT91_GPIO_MULTIDRAIN): Add a macro to
+	enable/disable multidrain on a GPIO pin.
+
 2008-11-03  Gabor Toeroek <tgabor84@gmail.com>
 
 	* include/var_io.h: Added defines for AT91SAM7SE.
